Add Heroku build
1. Fix read to use `npm start` to run application
2. Add heroku

--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "bin": {
     "Orio": "index.js"
   },
+  "scripts": {
+    "example": "webpack --config ./app/webpack.config.js",
+    "serve": "node ./app/server.js",
+    "start": "npm run example && npm run serve"
+  },  
   "keywords": [
     "happyfresh",
     "static",
